src/App.css
/* ... */
.newsletter-bx h3 {
  font-weight: 700;
  letter-spacing: 0.5px;
  line-height: 1.2em;
}
.new-email-bx {
  background: #fff;
  padding: 5px;
  border-radius: 20px;
  position: relative;
  z-index: 0;
  display: flex;
  align-items: center;
}
.new-email-bx::before {
  content: "";
  background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
  border-radius: 20px;
  position: absolute;
  z-index: -1;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
}
.new-email-bx::after {
  content: "";
  background: #fff;
  border-radius: 20px;
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}
.new-email-bx input {
  width: 100%;
  color: #121212;
  font-weight: 500;
  background: transparent;
  border: 0;
  padding: 0 15px;
}
.new-email-bx button {
  background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
  padding: 20px 65px;
  color: #fff;
  font-weight: 500;
  letter-spacing: 0.5px;
  border-radius: 18px;
}
.footer img {
  width: 26%;
}
.footer p {
  font-weight: 400;
  font-size: 20px;
  color: #ffffff;
  letter-spacing: 0.5px;
  margin-top: 20px;
}

/************ Meet Css ************/
.meet {
  margin-top: 0;
  min-height: 100vh;
  padding: 200px 200px 200px 200px;
  background-image: url("./assets/img/banner-bg.png");
  background-position: top center;
  background-size: cover;
  background-repeat: no-repeat;
}

.forfreshmen {
  margin-top: 0;
  min-height: 100vh;
  padding: 200px 200px 200px 200px;
  background-image: url("./assets/img/banner-bg3.png");
  background-position: top center;
  background-size: cover;
  background-repeat: no-repeat;
}

.forfreshmen h1 {
  font-size: 11em;
  color: red;
  text-decoration: underline;
  text-transform: uppercase;
  transform: rotate(-5deg) skew(-5deg);
}

